# Lukovka

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ruff.yml
app/: Makefile  alembic.ini  main.py
app/api/: __init__.py
app/api/auth/: accessor.py  depends.py  errors.py  manager.py
app/api/depots/: accessor.py  views.py
app/api/fuels/: accessor.py  views.py
app/api/lots/: accessor.py  errors.py  manager.py  views.py
app/api/orders/: accessor.py  errors.py  filters.py  manager.py  views.py
app/core/: config.py  email.py  jwt.py  store.py
app/core/models/: depots.py  fuels.py  jwt.py  lots.py  mixins.py  orders.py  user.py
app/templates/: email_confirm.html
backend/: pyproject.toml
backend/app/: API.md  store.py
backend/app/api/auth/: depends.py  views.py
backend/app/api/depots/: accessor.py
backend/app/api/fuels/: accessor.py  views.py
backend/app/api/lots/: filters.py  manager.py  views.py
backend/app/api/orders/: errors.py  filters.py  manager.py  views.py
backend/app/api/ping/: views.py
backend/app/core/: accessor.py  config.py  db.py
backend/app/core/models/: depots.py  lots.py  user.py
backend/app/core/models/migrations/: __init__.py  env.py
backend/app/templates/: email_confirm.html  email_inform_change_status.html  email_inform_create_order.html
for_readme/: lots_example.csv
frontend/: Dockerfile  webpack.config.js
frontend/src/: main.tsx
frontend/src/App/: App.tsx
frontend/src/api/: AuthService.ts  api.config.ts
nginx/: default.conf
(+14 files in other folders)
